packages/patacrep/patacrep-4.0.0.tar.gz/patacrep-4.0.0/patacrep/data/examples/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> brackets expression
Rule 2     expression -> braces expression
Rule 3     expression -> command expression
Rule 4     expression -> NEWLINE expression
Rule 5     expression -> beginsong expression
Rule 6     expression -> word expression
Rule 7     expression -> SPACE expression
Rule 8     expression -> empty
Rule 9     empty -> <empty>
Rule 10    brackets -> LBRACKET expression RBRACKET
Rule 11    braces -> LBRACE expression RBRACE
Rule 12    command -> COMMAND brackets_list braces_list
Rule 13    brackets_list -> brackets brackets_list
Rule 14    brackets_list -> empty
Rule 15    braces_list -> braces braces_list
Rule 16    braces_list -> empty
Rule 17    word -> CHARACTER word_next
Rule 18    word -> COMMA word_next
Rule 19    word -> EQUAL word_next
Rule 20    word_next -> CHARACTER word_next
Rule 21    word_next -> empty
Rule 22    beginsong -> BEGINSONG separator songbraces separator songbrackets
Rule 23    songbrackets -> SONG_LOPTIONS separator dictionary separator SONG_ROPTIONS
Rule 24    songbrackets -> empty
Rule 25    songbraces -> SONG_LTITLE separator titles separator SONG_RTITLE
Rule 26    songbraces -> empty
Rule 27    dictionary -> identifier EQUAL braces dictionary_next
Rule 28    dictionary -> identifier EQUAL error dictionary_next
Rule 29    identifier -> CHARACTER identifier
Rule 30    identifier -> empty
Rule 31    separator -> SPACE
Rule 32    separator -> empty
Rule 33    dictionary_next -> separator COMMA separator dictionary
Rule 34    dictionary_next -> empty
Rule 35    titles -> title titles_next
Rule 36    titles_next -> NEWLINE title titles_next
Rule 37    titles_next -> empty
Rule 38    title -> brackets title
Rule 39    title -> braces title
Rule 40    title -> command title
Rule 41    title -> word title
Rule 42    title -> SPACE title
Rule 43    title -> empty

Terminals, with rules where they appear

BEGINSONG            : 22
CHARACTER            : 17 20 29
COMMA                : 18 33
COMMAND              : 12
EQUAL                : 19 27 28
LBRACE               : 11
LBRACKET             : 10
NEWLINE              : 4 36
RBRACE               : 11
RBRACKET             : 10
SONG_LOPTIONS        : 23
SONG_LTITLE          : 25
SONG_ROPTIONS        : 23
SONG_RTITLE          : 25
SPACE                : 7 31 42
error                : 28

Nonterminals, with rules where they appear

beginsong            : 5
braces               : 2 15 27 39
braces_list          : 12 15
brackets             : 1 13 38
brackets_list        : 12 13
command              : 3 40
dictionary           : 23 33
dictionary_next      : 27 28
empty                : 8 14 16 21 24 26 30 32 34 37 43
expression           : 1 2 3 4 5 6 7 10 11 0
identifier           : 27 28 29
separator            : 22 22 23 23 25 25 33 33
songbraces           : 22
songbrackets         : 22
title                : 35 36 38 39 40 41 42
titles               : 25
titles_next          : 35 36
word                 : 6 41
word_next            : 17 18 19 20

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 13
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 1

    (17) word -> CHARACTER . word_next
    (20) word_next -> . CHARACTER word_next
    (21) word_next -> . empty
    (9) empty -> .

  ! shift/reduce conflict for CHARACTER resolved as shift
    CHARACTER       shift and go to state 17
    NEWLINE         reduce using rule 9 (empty -> .)
    SPACE           reduce using rule 9 (empty -> .)
    LBRACKET        reduce using rule 9 (empty -> .)
    LBRACE          reduce using rule 9 (empty -> .)
    COMMAND         reduce using rule 9 (empty -> .)
    BEGINSONG       reduce using rule 9 (empty -> .)
    COMMA           reduce using rule 9 (empty -> .)
    EQUAL           reduce using rule 9 (empty -> .)
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)
    SONG_RTITLE     reduce using rule 9 (empty -> .)

  ! CHARACTER       [ reduce using rule 9 (empty -> .) ]

    empty                          shift and go to state 18
    word_next                      shift and go to state 19

state 2

    (7) expression -> SPACE . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 20
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 3

    (5) expression -> beginsong . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 21
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 4

    (1) expression -> brackets . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 22
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 5

    (6) expression -> word . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    braces                         shift and go to state 6
    expression                     shift and go to state 23
    empty                          shift and go to state 14

state 6

    (2) expression -> braces . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    braces                         shift and go to state 6
    expression                     shift and go to state 24
    empty                          shift and go to state 14

state 7

    (11) braces -> LBRACE . expression RBRACE
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    RBRACE          reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 25
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 8

    (18) word -> COMMA . word_next
    (20) word_next -> . CHARACTER word_next
    (21) word_next -> . empty
    (9) empty -> .

  ! shift/reduce conflict for CHARACTER resolved as shift
    CHARACTER       shift and go to state 17
    NEWLINE         reduce using rule 9 (empty -> .)
    SPACE           reduce using rule 9 (empty -> .)
    LBRACKET        reduce using rule 9 (empty -> .)
    LBRACE          reduce using rule 9 (empty -> .)
    COMMAND         reduce using rule 9 (empty -> .)
    BEGINSONG       reduce using rule 9 (empty -> .)
    COMMA           reduce using rule 9 (empty -> .)
    EQUAL           reduce using rule 9 (empty -> .)
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)
    SONG_RTITLE     reduce using rule 9 (empty -> .)

  ! CHARACTER       [ reduce using rule 9 (empty -> .) ]

    empty                          shift and go to state 18
    word_next                      shift and go to state 26

state 9

    (3) expression -> command . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 27
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 10

    (19) word -> EQUAL . word_next
    (20) word_next -> . CHARACTER word_next
    (21) word_next -> . empty
    (9) empty -> .

  ! shift/reduce conflict for CHARACTER resolved as shift
    CHARACTER       shift and go to state 17
    NEWLINE         reduce using rule 9 (empty -> .)
    SPACE           reduce using rule 9 (empty -> .)
    LBRACKET        reduce using rule 9 (empty -> .)
    LBRACE          reduce using rule 9 (empty -> .)
    COMMAND         reduce using rule 9 (empty -> .)
    BEGINSONG       reduce using rule 9 (empty -> .)
    COMMA           reduce using rule 9 (empty -> .)
    EQUAL           reduce using rule 9 (empty -> .)
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)
    SONG_RTITLE     reduce using rule 9 (empty -> .)

  ! CHARACTER       [ reduce using rule 9 (empty -> .) ]

    empty                          shift and go to state 18
    word_next                      shift and go to state 28

state 11

    (22) beginsong -> BEGINSONG . separator songbraces separator songbrackets
    (31) separator -> . SPACE
    (32) separator -> . empty
    (9) empty -> .

  ! shift/reduce conflict for SPACE resolved as shift
    SPACE           shift and go to state 30
    SONG_LTITLE     reduce using rule 9 (empty -> .)
    SONG_LOPTIONS   reduce using rule 9 (empty -> .)
    NEWLINE         reduce using rule 9 (empty -> .)
    LBRACKET        reduce using rule 9 (empty -> .)
    LBRACE          reduce using rule 9 (empty -> .)
    COMMAND         reduce using rule 9 (empty -> .)
    BEGINSONG       reduce using rule 9 (empty -> .)
    CHARACTER       reduce using rule 9 (empty -> .)
    COMMA           reduce using rule 9 (empty -> .)
    EQUAL           reduce using rule 9 (empty -> .)
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

  ! SPACE           [ reduce using rule 9 (empty -> .) ]

    separator                      shift and go to state 29
    empty                          shift and go to state 31

state 12

    (12) command -> COMMAND . brackets_list braces_list
    (13) brackets_list -> . brackets brackets_list
    (14) brackets_list -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (9) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 16
    LBRACE          reduce using rule 9 (empty -> .)
    NEWLINE         reduce using rule 9 (empty -> .)
    SPACE           reduce using rule 9 (empty -> .)
    COMMAND         reduce using rule 9 (empty -> .)
    BEGINSONG       reduce using rule 9 (empty -> .)
    CHARACTER       reduce using rule 9 (empty -> .)
    COMMA           reduce using rule 9 (empty -> .)
    EQUAL           reduce using rule 9 (empty -> .)
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)
    SONG_RTITLE     reduce using rule 9 (empty -> .)

  ! LBRACKET        [ reduce using rule 9 (empty -> .) ]

    empty                          shift and go to state 32
    brackets                       shift and go to state 33
    brackets_list                  shift and go to state 34

state 13

    (0) S' -> expression .



state 14

    (8) expression -> empty .

    $end            reduce using rule 8 (expression -> empty .)
    RBRACE          reduce using rule 8 (expression -> empty .)
    RBRACKET        reduce using rule 8 (expression -> empty .)


state 15

    (4) expression -> NEWLINE . expression
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 35
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 16

    (10) brackets -> LBRACKET . expression RBRACKET
    (1) expression -> . brackets expression
    (2) expression -> . braces expression
    (3) expression -> . command expression
    (4) expression -> . NEWLINE expression
    (5) expression -> . beginsong expression
    (6) expression -> . word expression
    (7) expression -> . SPACE expression
    (8) expression -> . empty
    (10) brackets -> . LBRACKET expression RBRACKET
    (11) braces -> . LBRACE expression RBRACE
    (12) command -> . COMMAND brackets_list braces_list
    (22) beginsong -> . BEGINSONG separator songbraces separator songbrackets
    (17) word -> . CHARACTER word_next
    (18) word -> . COMMA word_next
    (19) word -> . EQUAL word_next
    (9) empty -> .

    NEWLINE         shift and go to state 15
    SPACE           shift and go to state 2
    LBRACKET        shift and go to state 16
    LBRACE          shift and go to state 7
    COMMAND         shift and go to state 12
    BEGINSONG       shift and go to state 11
    CHARACTER       shift and go to state 1
    COMMA           shift and go to state 8
    EQUAL           shift and go to state 10
    RBRACKET        reduce using rule 9 (empty -> .)

    beginsong                      shift and go to state 3
    command                        shift and go to state 9
    brackets                       shift and go to state 4
    word                           shift and go to state 5
    expression                     shift and go to state 36
    braces                         shift and go to state 6
    empty                          shift and go to state 14

state 17

    (20) word_next -> CHARACTER . word_next
    (20) word_next -> . CHARACTER word_next
    (21) word_next -> . empty
    (9) empty -> .

  ! shift/reduce conflict for CHARACTER resolved as shift
    CHARACTER       shift and go to state 17
    NEWLINE         reduce using rule 9 (empty -> .)
    SPACE           reduce using rule 9 (empty -> .)
    LBRACKET        reduce using rule 9 (empty -> .)
    LBRACE          reduce using rule 9 (empty -> .)
    COMMAND         reduce using rule 9 (empty -> .)
    BEGINSONG       reduce using rule 9 (empty -> .)
    COMMA           reduce using rule 9 (empty -> .)
    EQUAL           reduce using rule 9 (empty -> .)
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)
    SONG_RTITLE     reduce using rule 9 (empty -> .)

  ! CHARACTER       [ reduce using rule 9 (empty -> .) ]

    empty                          shift and go to state 18
    word_next                      shift and go to state 37

state 18

    (21) word_next -> empty .

    NEWLINE         reduce using rule 21 (word_next -> empty .)
    SPACE           reduce using rule 21 (word_next -> empty .)
    LBRACKET        reduce using rule 21 (word_next -> empty .)
    LBRACE          reduce using rule 21 (word_next -> empty .)
    COMMAND         reduce using rule 21 (word_next -> empty .)
    BEGINSONG       reduce using rule 21 (word_next -> empty .)
    CHARACTER       reduce using rule 21 (word_next -> empty .)
    COMMA           reduce using rule 21 (word_next -> empty .)
    EQUAL           reduce using rule 21 (word_next -> empty .)
    $end            reduce using rule 21 (word_next -> empty .)
    RBRACE          reduce using rule 21 (word_next -> empty .)
    RBRACKET        reduce using rule 21 (word_next -> empty .)
    SONG_RTITLE     reduce using rule 21 (word_next -> empty .)


state 19

    (17) word -> CHARACTER word_next .

    NEWLINE         reduce using rule 17 (word -> CHARACTER word_next .)
    SPACE           reduce using rule 17 (word -> CHARACTER word_next .)
    LBRACKET        reduce using rule 17 (word -> CHARACTER word_next .)
    LBRACE          reduce using rule 17 (word -> CHARACTER word_next .)
    COMMAND         reduce using rule 17 (word -> CHARACTER word_next .)
    BEGINSONG       reduce using rule 17 (word -> CHARACTER word_next .)
    CHARACTER       reduce using rule 17 (word -> CHARACTER word_next .)
    COMMA           reduce using rule 17 (word -> CHARACTER word_next .)
    EQUAL           reduce using rule 17 (word -> CHARACTER word_next .)
    RBRACKET        reduce using rule 17 (word -> CHARACTER word_next .)
    SONG_RTITLE     reduce using rule 17 (word -> CHARACTER word_next .)
    RBRACE          reduce using rule 17 (word -> CHARACTER word_next .)
    $end            reduce using rule 17 (word -> CHARACTER word_next .)


state 20

    (7) expression -> SPACE expression .

    $end            reduce using rule 7 (expression -> SPACE expression .)
    RBRACE          reduce using rule 7 (expression -> SPACE expression .)
    RBRACKET        reduce using rule 7 (expression -> SPACE expression .)


state 21

    (5) expression -> beginsong expression .

    $end            reduce using rule 5 (expression -> beginsong expression .)
    RBRACE          reduce using rule 5 (expression -> beginsong expression .)
    RBRACKET        reduce using rule 5 (expression -> beginsong expression .)


state 22

    (1) expression -> brackets expression .

    $end            reduce using rule 1 (expression -> brackets expression .)
    RBRACE          reduce using rule 1 (expression -> brackets expression .)
    RBRACKET        reduce using rule 1 (expression -> brackets expression .)


state 23

    (6) expression -> word expression .

    $end            reduce using rule 6 (expression -> word expression .)
    RBRACE          reduce using rule 6 (expression -> word expression .)
    RBRACKET        reduce using rule 6 (expression -> word expression .)


state 24

    (2) expression -> braces expression .

    $end            reduce using rule 2 (expression -> braces expression .)
    RBRACE          reduce using rule 2 (expression -> braces expression .)
    RBRACKET        reduce using rule 2 (expression -> braces expression .)


state 25

    (11) braces -> LBRACE expression . RBRACE

    RBRACE          shift and go to state 38


state 26

    (18) word -> COMMA word_next .

    NEWLINE         reduce using rule 18 (word -> COMMA word_next .)
    SPACE           reduce using rule 18 (word -> COMMA word_next .)
    LBRACKET        reduce using rule 18 (word -> COMMA word_next .)
    LBRACE          reduce using rule 18 (word -> COMMA word_next .)
    COMMAND         reduce using rule 18 (word -> COMMA word_next .)
    BEGINSONG       reduce using rule 18 (word -> COMMA word_next .)
    CHARACTER       reduce using rule 18 (word -> COMMA word_next .)
    COMMA           reduce using rule 18 (word -> COMMA word_next .)
    EQUAL           reduce using rule 18 (word -> COMMA word_next .)
    RBRACKET        reduce using rule 18 (word -> COMMA word_next .)
    SONG_RTITLE     reduce using rule 18 (word -> COMMA word_next .)
    RBRACE          reduce using rule 18 (word -> COMMA word_next .)
    $end            reduce using rule 18 (word -> COMMA word_next .)


state 27

    (3) expression -> command expression .

    $end            reduce using rule 3 (expression -> command expression .)
    RBRACE          reduce using rule 3 (expression -> command expression .)
    RBRACKET        reduce using rule 3 (expression -> command expression .)


state 28

    (19) word -> EQUAL word_next .

    NEWLINE         reduce using rule 19 (word -> EQUAL word_next .)
    SPACE           reduce using rule 19 (word -> EQUAL word_next .)
    LBRACKET        reduce using rule 19 (word -> EQUAL word_next .)
    LBRACE          reduce using rule 19 (word -> EQUAL word_next .)
    COMMAND         reduce using rule 19 (word -> EQUAL word_next .)
    BEGINSONG       reduce using rule 19 (word -> EQUAL word_next .)
    CHARACTER       reduce using rule 19 (word -> EQUAL word_next .)
    COMMA           reduce using rule 19 (word -> EQUAL word_next .)
    EQUAL           reduce using rule 19 (word -> EQUAL word_next .)
    RBRACKET        reduce using rule 19 (word -> EQUAL word_next .)
    SONG_RTITLE     reduce using rule 19 (word -> EQUAL word_next .)
    RBRACE          reduce using rule 19 (word -> EQUAL word_next .)
    $end            reduce using rule 19 (word -> EQUAL word_next .)


state 29

    (22) beginsong -> BEGINSONG separator . songbraces separator songbrackets
    (25) songbraces -> . SONG_LTITLE separator titles separator SONG_RTITLE
    (26) songbraces -> . empty
    (9) empty -> .

    SONG_LTITLE     shift and go to state 41
    SPACE           reduce using rule 9 (empty -> .)
    SONG_LOPTIONS   reduce using rule 9 (empty -> .)
    NEWLINE         reduce using rule 9 (empty -> .)
    LBRACKET        reduce using rule 9 (empty -> .)
    LBRACE          reduce using rule 9 (empty -> .)
    COMMAND         reduce using rule 9 (empty -> .)
    BEGINSONG       reduce using rule 9 (empty -> .)
    CHARACTER       reduce using rule 9 (empty -> .)
    COMMA           reduce using rule 9 (empty -> .)
    EQUAL           reduce using rule 9 (empty -> .)
    $end            reduce using rule 9 (empty -> .)
    RBRACE          reduce using rule 9 (empty -> .)
    RBRACKET        reduce using rule 9 (empty -> .)

    empty                          shift and go to state 39
    songbraces                     shift and go to state 40

state 30

    (31) separator -> SPACE .

    SONG_RTITLE     reduce using rule 31 (separator -> SPACE .)
    SONG_LOPTIONS   reduce using rule 31 (separator -> SPACE .)
    NEWLINE         reduce using rule 31 (separator -> SPACE .)
    SPACE           reduce using rule 31 (separator -> SPACE .)
    LBRACKET        reduce using rule 31 (separator -> SPACE .)
    LBRACE          reduce using rule 31 (separator -> SPACE .)
    COMMAND         reduce using rule 31 (separator -> SPACE .)
    BEGINSONG       reduce using rule 31 (separator -> SPACE .)
    CHARACTER       reduce using rule 31 (separator -> SPACE .)
    COMMA           reduce using rule 31 (separator -> SPACE .)
    EQUAL           reduce using rule 31 (separator -> SPACE .)
    $end            reduce using rule 31 (separator -> SPACE .)
    RBRACE          reduce using rule 31 (separator -> SPACE .)
    RBRACKET        reduce using rule 31 (separator -> SPACE .)
    SONG_ROPTIONS   reduce using rule 31 (separator -> SPACE .)
    SONG_LTITLE     reduce using rule 31 (separator -> SPACE .)


state 31

    (32) separator -> empty .

    SONG_RTITLE     reduce using rule 32 (separator -> empty .)
    SONG_LOPTIONS   reduce using rule 32 (separator -> empty .)
    NEWLINE         reduce using rule 32 (separator -> empty .)
    SPACE           reduce using rule 32 (separator -> empty .)
    LBRACKET        reduce using rule 32 (separator -> empty .)
    LBRACE          reduce using rule 32 (separator -> empty .)
    COMMAND         reduce using rule 32 (separator -> empty .)
    BEGINSONG       reduce using rule 32 (separator -> empty .)
    CHARACTER       reduce using rule 32 (separator -> empty .)
    COMMA           reduce using rule 32 (separator -> empty .)
    EQUAL           reduce using rule 32 (separator -> empty .)
    $end            reduce using rule 32 (separator -> empty .)
    RBRACE          reduce using rule 32 (separator -> empty .)
    RBRACKET        reduce using rule 32 (separator -> empty .)
    SONG_ROPTIONS   reduce using rule 32 (separator -> empty .)
    SONG_LTITLE     reduce using rule 32 (separator -> empty .)


state 32

    (14) brackets_list -> empty .
